iniciando no css

--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIAP</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>FIAP o novo está aqui</h1>
+    <header class="topo">
+    <img class="logofiap" src="img/fiaplogosemfundo.png" width="300px" alt="Imagem da Logo da FIAP">
 
-    <img src="img/fiaplogo.png" width="300px" alt="Imagem da Logo da FIAP">
+    <h1 class="vermelhofiap">FIAP o novo está aqui</h1>
+    </header>
 
-    <h3>A FIAP é o centro de excelência em tecnologia mais respeitado do país. Uma história que vem sendo construída dia
+    <div class="box1">
+    <h3 class="vermelhofiap">A FIAP é o centro de excelência em tecnologia mais respeitado do país. Uma história que vem sendo construída dia
         após dia, estimulando mentes a vivenciarem a inovação e o empreendedorismo. Porque a FIAP acredita no poder
         transformador da tecnologia. Um poder que, aliado à criatividade, inventa, muda, inquieta. Faz as pessoas buscarem
-        soluções que nunca foram pensadas. Tudo isso para construir um mundo melhor. Para acessar os meus sites favoritos <a href="meussitesfavoritos.html">CLIQUE AQUI</a> </h3>
+        soluções que nunca foram pensadas. Tudo isso para construir um mundo melhor. Para acessar os meus sites favoritos <a class="cliqueaqui" href="meussitesfavoritos.html">CLIQUE AQUI</a> </h3>
+    </div>
 
-    <h2>Conheça os Cursos</h2>
+    <h2 class="vermelhofiap">Conheça os Cursos</h2>
 
     <ul>
         <li> <a href="cursos/adm.html">Administração</a> </li>
