mudando o titulo da pagina e adicionando a fonte

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>FIAP o novo está aqui</h1>
 
-    <img src="img/fiaplogo.png" width="300px" alt="Imagem da Logo da FIAP">
+    <div class="fiaplogo">
+    <img class="logofiap" src="img/fiaplogosemfundo.png" width="300px" alt="Imagem da Logo da FIAP">
+
+    <h1 class="titulo">O NOVO ESTÁ AQUI</h1>
+    </div>
 
     <h3>A FIAP é o centro de excelência em tecnologia mais respeitado do país. Uma história que vem sendo construída dia
         após dia, estimulando mentes a vivenciarem a inovação e o empreendedorismo. Porque a FIAP acredita no poder
