--- a/index.html
+++ b/index.html
@@ -14,26 +14,40 @@
     <h1 class="titulo">O NOVO ESTÁ AQUI</h1>
     </div>
 
+    <div class="box1">
     <h3>A FIAP é o centro de excelência em tecnologia mais respeitado do país. Uma história que vem sendo construída dia
         após dia, estimulando mentes a vivenciarem a inovação e o empreendedorismo. Porque a FIAP acredita no poder
         transformador da tecnologia. Um poder que, aliado à criatividade, inventa, muda, inquieta. Faz as pessoas buscarem
         soluções que nunca foram pensadas. Tudo isso para construir um mundo melhor. Para acessar os meus sites favoritos <a href="meussitesfavoritos.html">CLIQUE AQUI</a> </h3>
+    </div>
 
-    <h2>Conheça os Cursos</h2>
+    <div class="box2">
+    <h2 class="titulocursos">Conheça os Cursos</h2>
 
     <ul>
-        <li> <a href="cursos/adm.html">Administração</a> </li>
-        <li> <a href="cursos/ads.html">Análise e Desenvolvimento de sistemas</a> </li>
-        <li> <a href="cursos/engenhariadacomputacao.html">Engenharia da Computação</a> </li>
-        <li> <a href="cursos/engenhariadaproducao.html">Engenharia da Produção</a> </li>
-        <li> <a href="cursos/engenhariamecatronica.html">Engenharia Mecatrônica</a> </li>
-        <li> <a href="cursos/bancodedados.html">Banco de Dados</a> </li>
-        <li> <a href="cursos/gestaodetecnologiadainformacao.html">Gestão de Tecnologia da Informação</a> </li>
-        <li> <a href="cursos/jogosdigitais.html">Jogos Digitais</a> </li>
-        <li> <a href="cursos/sistemasdeinformacao.html">Sistemas de Informação</a> </li>
-        <li> <a href="cursos/sistemasparainternet.html">Sistemas para Internet</a> </li>
-        <li> <a href="cursos/rededecomputadores.html">Rede de Computadores</a> </li>
+        <li> <a class="adm" href="cursos/adm.html">Administração</a> </li>
+
+        <li> <a class="ads" href="cursos/ads.html">Análise e Desenvolvimento de sistemas</a> </li>
+
+        <li> <a class="engenhariadacomputacao" href="cursos/engenhariadacomputacao.html">Engenharia da Computação</a> </li>
+
+        <li> <a class="engenhariadaproducao" href="cursos/engenhariadaproducao.html">Engenharia da Produção</a> </li>
+
+        <li> <a class="engenhariamecatronica" href="cursos/engenhariamecatronica.html">Engenharia Mecatrônica</a> </li>
+
+        <li> <a class="bancodedados" href="cursos/bancodedados.html">Banco de Dados</a> </li>
+
+        <li> <a class="gestaodetecnologiadainformacao" href="cursos/gestaodetecnologiadainformacao.html">Gestão de Tecnologia da Informação</a> </li>
+
+        <li> <a class="jogosdigitais" href="cursos/jogosdigitais.html">Jogos Digitais</a> </li>
+
+        <li> <a class="sistemasdeinformacao" href="cursos/sistemasdeinformacao.html">Sistemas de Informação</a> </li>
+
+        <li> <a class="sistemasparainternet" href="cursos/sistemasparainternet.html">Sistemas para Internet</a> </li>
+
+        <li> <a class="rededecomputadores" href="cursos/rededecomputadores.html">Rede de Computadores</a> </li>
     </ul>
+    </div>
 
 </body>
 </html>
