finalizado a personalização do curso adm

--- a/cursos/adm.html
+++ b/cursos/adm.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administração</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
-    <h1>Administração</h1>
+<body class="bodyadm">
+    <div class="boxtituloadm">
+    <h1 class="tituloadm">Administração</h1>
 
-    <img src="../img/adm.png" width="500px" alt="Imagem sobre Administração">
+    <img class="imagemadm" src="../img/adm.png" width="500px" alt="Imagem sobre Administração">
+    </div>
 
+    <div class="textosadm">
     <h2>O Curso</h2>
 
     <h3>A FIAP tem o melhor curso de Administração de São Paulo, primeiro colocado no ENADE. Isso é consequência de um
@@ -22,8 +26,11 @@
     
     <h3>Você será capaz de apoiar e conduzir os principais planos de uma empresa em cenários dinâmicos, competitivos e
         tecnológicos.</h3>
+    </div>
 
-        <a href="rededecomputadores.html">Curso Anterior</a> | <a href="../index.html">Página Principal</a> | <a href="ads.html">Próximo Curso</a>
+        <div class="fimadm">
+        <a class="peadm" href="rededecomputadores.html">Curso Anterior</a> | <a class="peadm" href="../index.html">Página Principal</a> | <a class="peadm" href="ads.html">Próximo Curso</a>
+        </div>
     
 </body>
 </html>
