--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <h3>A FIAP é o centro de excelência em tecnologia mais respeitado do país. Uma história que vem sendo construída dia
         após dia, estimulando mentes a vivenciarem a inovação e o empreendedorismo. Porque a FIAP acredita no poder
         transformador da tecnologia. Um poder que, aliado à criatividade, inventa, muda, inquieta. Faz as pessoas buscarem
-        soluções que nunca foram pensadas. Tudo isso para construir um mundo melhor. Para acessar os meus sites favoritos <a href="meussitesfavoritos.html">CLIQUE AQUI</a> </h3>
+        soluções que nunca foram pensadas. Tudo isso para construir um mundo melhor. Para acessar os meus sites favoritos <a class="cliqueaqui" href="meussitesfavoritos.html">CLIQUE AQUI</a> </h3>
     </div>
 
     <div class="box2">
-    <h2 class="titulocursos">Conheça os Cursos</h2>
+    <h2 class="titulocursos">Conheça nossos Cursos:</h2>
 
     <ul>
         <li> <a class="adm" href="cursos/adm.html">Administração</a> </li>
