--- a/meussitesfavoritos.html
+++ b/meussitesfavoritos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus Sites Favoritos</title>
+    <link rel="stylesheet" href="css/style_favoritos.css">
 </head>
 <body>
     <h1>MEUS SITES FAVORITOS</h1>
