--- a/cursos/ads.html
+++ b/cursos/ads.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Análise e Desenvolvimento de sistemas</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Análise e Desenvolvimento de sistemas</h1>
+    <div class="boxtituloads">
+    <h1 class="tituloads">Análise e Desenvolvimento de sistemas</h1>
 
-    <img src="../img/ads.png" width="500px" alt="Imagem sobre Análise e Desenvolvimento de sistemas">
+    <img class="imagemads" src="../img/ads.png" width="500px" alt="Imagem sobre Análise e Desenvolvimento de sistemas">
+    </div>
 
+    <div class="textosads">
     <h2>O Curso</h2>
 
     <h3>Você vai aprender a identificar as necessidades estruturais de um sistema, documentar, criar protótipos e desenvolver
@@ -19,8 +23,11 @@
     <h3>Você vai desenvolver sistemas de alta qualidade e produtividade para web e mobile nas linguagens de programação
         Java, .NET, Android e Apple iOS, bem como integrar estas plataformas entre si e com outras, tal como Mainframe e
         SAP.</h3>
+    </div> 
 
-    <a href="adm.html">Curso Anterior</a> | <a href="../index.html">Página Principal</a> | <a href="engenhariadacomputacao.html">Próximo Curso</a>
-    
+    <div class="fimads">
+    <a class="peads" href="adm.html">Curso Anterior</a> | <a class="peads" href="../index.html">Página Principal</a> | <a class="peads" href="engenhariadacomputacao.html">Próximo Curso</a>
+    </div>
+
 </body>
 </html>
