--- a/cursos/bancodedados.html
+++ b/cursos/bancodedados.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banco de Dados</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Banco de Dados</h1>
+    <div class="boxtitulobancodedados">
+    <h1 class="titulobancodedados">Banco de Dados</h1>
 
     <img src="../img/bancodedados.png" width="500px" alt="Imagem sobre Banco de Dados">
+    </div>
 
     <h2>O Curso</h2>
 
