feito a personalização do curso banco de dados

--- a/cursos/bancodedados.html
+++ b/cursos/bancodedados.html
@@ -10,9 +10,10 @@
     <div class="boxtitulobancodedados">
     <h1 class="titulobancodedados">Banco de Dados</h1>
 
-    <img src="../img/bancodedados.png" width="500px" alt="Imagem sobre Banco de Dados">
+    <img class="imgbancodedados" src="../img/bancodedados.png" width="500px" alt="Imagem sobre Banco de Dados">
     </div>
 
+    <div class="textosbancodedados">
     <h2>O Curso</h2>
 
     <h3>Tecnologia em Banco de Dados prepara você para entender e utilizar melhor os dados, criando soluções inovadoras a
@@ -29,8 +30,11 @@
     
     <h3>Através do conceito de Big Data, organize as fontes de dados e utilize-as obtendo insights que embasem as
         corporações para a melhoria da operação do seu negócio.</h3>
+    </div>
 
-    <a href="engenhariamecatronica.html">Curso Anterior</a> | <a href="../index.html">Página Principal</a> | <a href="gestaodetecnologiadainformacao.html">Próximo Curso</a>   
+    <div class="fimbancodedados">
+    <a class="pebancodedados" href="engenhariamecatronica.html">Curso Anterior</a> | <a class="pebancodedados" href="../index.html">Página Principal</a> | <a class="pebancodedados" href="gestaodetecnologiadainformacao.html">Próximo Curso</a>   
+    </div>
 
 </body>
 </html>
