--- a/cursos/engenhariadacomputacao.html
+++ b/cursos/engenhariadacomputacao.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Engenharia da Computação</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Engenharia da Computação</h1>
+    <div class="boxtituloengenhariadacomputacao">
+    <h1 class="tituloengenhariadacomputacao">Engenharia da Computação</h1>
 
-    <img src="../img/engenhariadacomputacao.png" width="500px" alt="Imagem sobre Engenharia da Computação">
+    <img class="imgengenhariadacomputacao" src="../img/engenhariadacomputacao.png" width="500px" alt="Imagem sobre Engenharia da Computação">
+    </div>
 
     <h2>O Curso</h2>
 
