feito o css do curso engenharia da computação

--- a/cursos/engenhariadacomputacao.html
+++ b/cursos/engenhariadacomputacao.html
@@ -13,6 +13,7 @@
     <img class="imgengenhariadacomputacao" src="../img/engenhariadacomputacao.png" width="500px" alt="Imagem sobre Engenharia da Computação">
     </div>
 
+    <div class="textosengenhariadacomputacao">
     <h2>O Curso</h2>
 
     <h3>O ENGENHEIRO DA COMPUTAÇÃO desenvolve projetos nas áreas de sistemas operacionais, arquitetura de
@@ -29,8 +30,11 @@
         fabricação e o ‘Maker Labs’, um dos laboratórios mais modernos de engenharia do Brasil, com impressoras 3D,
         usinagem, cortadoras laser e fresadoras de precisão para criação de protótipos e peças em automação simples e com
         CNC (Computer Numeric Control).</h3>
-    
-    <a href="ads.html">Curso Anterior</a> | <a href="../index.html">Página Principal</a> | <a href="engenhariadaproducao.html">Próximo Curso</a>   
+    </div>
+
+    <div class="fimdaengenhariadacomputacao">
+    <a class="peengenhariadacomputacao" href="ads.html">Curso Anterior</a> | <a class="peengenhariadacomputacao" href="../index.html">Página Principal</a> | <a class="peengenhariadacomputacao" href="engenhariadaproducao.html">Próximo Curso</a>  
+    </div> 
      
 </body>
 </html>
