--- a/cursos/engenhariadaproducao.html
+++ b/cursos/engenhariadaproducao.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Engenharia da Produção</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <div class="boxtituloengenhariadaproducao">
     <h1>Engenharia da Produção</h1>
 
     <img src="../img/engenhariadaproducao.png" width="500px" alt="Imagem sobre Engenharia da Produção">
+    </div>
 
     <h2>O Curso</h2>
 
