finalizado o css do curso engenharia da producao

--- a/cursos/engenhariadaproducao.html
+++ b/cursos/engenhariadaproducao.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div class="boxtituloengenhariadaproducao">
-    <h1>Engenharia da Produção</h1>
+    <h1 class="tituloengenhariadaproducao">Engenharia da Produção</h1>
 
-    <img src="../img/engenhariadaproducao.png" width="500px" alt="Imagem sobre Engenharia da Produção">
+    <img class="imgengenhariadaproducao" src="../img/engenhariadaproducao.png" width="500px" alt="Imagem sobre Engenharia da Produção">
     </div>
 
+    <div class="textosengenhariadaproducao">
     <h2>O Curso</h2>
 
     <h3>O ENGENHEIRO DE PRODUÇÃO reúne conhecimentos das áreas de administração, economia e engenharia. O curso
@@ -24,8 +25,11 @@
     <h3>Na FIAP, o futuro engenheiro dispõe de um parque tecnológico avançado, laboratórios de química, informática,
         fabricação e o Maker Labs, onde você pode ir da ideia ao protótipo, unindo práticas multidisciplinares de mecânica,
         eletrônica e tecnologia, com impressoras 3D, usinagem, cortadoras laser e fresadoras de precisão.</h3>
-    
-    <a href="engenhariadacomputacao.html">Curso Anterior</a> | <a href="../index.html">Página Principal</a> | <a href="engenhariamecatronica.html">Próximo Curso</a>
-    
+    </div>
+
+    <div class="fimengenhariadaproducao">
+    <a class="peengenhariadaproducao" href="engenhariadacomputacao.html">Curso Anterior</a> | <a class="peengenhariadaproducao" href="../index.html">Página Principal</a> | <a class="peengenhariadaproducao" href="engenhariamecatronica.html">Próximo Curso</a>
+    </div>
+
 </body>
 </html>
