--- a/cursos/engenhariamecatronica.html
+++ b/cursos/engenhariamecatronica.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Engenharia Mecatrônica</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Engenharia Mecatrônica</h1>
+    <div class="boxengenhariamecatronica">
+    <h1 class="tituloengenheriamecatronica">Engenharia Mecatrônica</h1>
 
     <img src="../img/engenhariamecatronica.png" width="500px" alt="Imagem sobre Engenharia Mecatrônica">
+    </div>
 
     <h2>O Curso</h2>
 
