--- a/cursos/engenhariamecatronica.html
+++ b/cursos/engenhariamecatronica.html
@@ -10,9 +10,10 @@
     <div class="boxengenhariamecatronica">
     <h1 class="tituloengenheriamecatronica">Engenharia Mecatrônica</h1>
 
-    <img src="../img/engenhariamecatronica.png" width="500px" alt="Imagem sobre Engenharia Mecatrônica">
+    <img class="imgengenhariamecatronica" src="../img/engenhariamecatronica.png" width="500px" alt="Imagem sobre Engenharia Mecatrônica">
     </div>
 
+    <div class="textosengenhariamecatronica">
     <h2>O Curso</h2>
 
     <h3>É uma das profissões mais promissoras do mercado, tanto em época de crise como em momentos positivos da
@@ -26,8 +27,11 @@
         por ano, utilizando tecnologias disruptivas como: Inteligência Artificial, Robótica, Sensores, Design, Sistemas
         Embarcados e Energias Alternativas. Transformar as empresas, aliando empreendedorismo, criatividade e design
         thinking. Este é o Engenheiro Mecatrônico que a FIAP quer formar. </h3>
+    </div>
 
-    <a href="engenhariadaproducao.html">Curso Anterior</a> | <a href="../index.html">Página Principal</a> | <a href="bancodedados.html">Próximo Curso</a>
+    <div class="fimengenhariamecatronica">
+    <a class="peengenhariamecatronica" href="engenhariadaproducao.html">Curso Anterior</a> | <a class="peengenhariamecatronica" href="../index.html">Página Principal</a> | <a class="peengenhariamecatronica" href="bancodedados.html">Próximo Curso</a>
+    </div>
     
 </body>
 </html>
